package edu.ics4u.nicolas.keymaps;

public enum Actions {
  accelerate,
  decelerate,
  initiateBrake,
  endBrake,
}
